Link button styling

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
+body {
+  background-color: honeydew;
+  font-family: Arial, Helvetica, sans-serif;
+}
 li {
-    display: inline;
-  }
+  display: inline;
+  font-weight: 900;
+  font-size: medium;
+}
+a {
+  color: black;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+a:link {
+  background-color: lightpink;
+}
+a:visited {
+  background-color: lightpink;
+}
+a:hover {
+  background-color: lightpink;
+  outline: medium solid salmon;
+}
+a:active {
+  background-color:salmon;
+}
