--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,8 @@ li {
   display: inline;
   font-weight: 900;
   font-size: medium;
+  padding: 0;
+  margin:0pt;
 }
 a {
   color: black;
@@ -26,4 +28,18 @@ a:hover {
 }
 a:active {
   background-color:salmon;
+}
+h1 {
+  background-color: salmon;
+  color: black;
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-weight: 900;
+  font-size: medium;
+  margin: 0pt;
+}
+ul {
+  margin:0pt;
 }
