Added basics of About Me page

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: honeydew;
+  background-color: linen;
   font-family: Arial, Helvetica, sans-serif;
 }
 li {
@@ -41,5 +41,23 @@ h1 {
   margin: 0pt;
 }
 ul {
-  margin:0pt;
+  margin: 0pt;
+}
+img {
+  max-width: 100%;
+  height: auto;
+  margin: 100pt
+}
+h2{
+  font-family: 'Roboto', sans-serif;
+  font-size: x-large;
+  font-weight: 400pt;
+  text-align: center;
+}
+p{
+  font-family: 'Roboto', sans-serif;
+  font-size: large;
+  font-weight: 100pt;
+  margin-left: 25pt;
+  line-height: 150%;
 }
