--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,64 @@
+html {
+  font-size: 100%
+}
 body {
-  background-color: linen;
+  background-color: #E2E3DF;
   font-family: Arial, Helvetica, sans-serif;
+}
+ul{
+  text-align: center;
 }
 li {
   display: inline;
-  font-weight: 900;
-  font-size: medium;
-  padding: 0;
-  margin:0pt;
+  margin: 0.5rem;
 }
 a {
   color: black;
-  padding: 14px 25px;
+  padding: 0.75rem 1.25rem;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  border-radius: 1rem;
 }
 a:link {
-  background-color: lightpink;
+  background-color: #E3AFBC;
 }
 a:visited {
-  background-color: lightpink;
+  background-color: #E3AFBC;
 }
 a:hover {
-  background-color: lightpink;
-  outline: medium solid salmon;
+  background-color: #e97391;
 }
 a:active {
-  background-color:salmon;
+  background-color:#ee4c7c;
 }
-h1 {
-  background-color: salmon;
+h2 {
+  background-color:#ee4c7c;
   color: black;
-  padding: 14px 25px;
+  padding: 0.75rem 1.25rem;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-weight: 900;
-  font-size: medium;
-  margin: 0pt;
-}
-ul {
-  margin: 0pt;
+  font-weight: bolder;
+  font-size: 1.5rem;
+  border-radius: 1rem;
 }
 img {
   max-width: 100%;
   height: auto;
-  margin: 100pt
+  margin: 4rem;
 }
-h2{
+h1{
   font-family: 'Roboto', sans-serif;
-  font-size: x-large;
-  font-weight: 400pt;
+  font-size: 2rem;
+  font-weight: bold;
   text-align: center;
 }
 p{
   font-family: 'Roboto', sans-serif;
-  font-size: large;
-  font-weight: 100pt;
-  margin-left: 25pt;
+  font-size: 1.5rem;
+  font-weight: 9rem;
   line-height: 150%;
+  margin:2rem 4rem;
 }
