--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,24 @@
+@import './Fonts.css'; 
+
+/* Colors and Palette from coolors.co */
 :root {
-  --CREAM: #fbeec1;
-  --BROWN: #bc986a;
-  --BEIGE: #daad86;
-  --BLUE: #659dbd;
-  --OLIVE: #8d8741;
-  --GREEN: #6d8d41;
-  --LIME: #478d41;
+  --RUSSIAN_VIOLET: #38023B;
+  --LAVENDER_FLORAL: #A288E3;
+  --BEAU_BLUE: #BBD5ED;
+  --LIGHT_CYAN: #CEFDFF;
+  --TEA_GREEN: #CCFFCB;
+  --HONEYDEW: #F0FEF0;
+
+
+  --MINT_CREAM: #f0f7f4;
+  --FERN_GREEN: #4c804a;
+  --MAGIC_MINT: #a2e3c4;
+  --PASTEL_PINK: #e09c9b;
+  --NY_PINK: #e58c8a;
+  --FRENCH_LILAC: #8f5994;
+
+  --MAJORELLE_BLUE: #574ae2;
+  --ST_PATRICKS_BLUE: #222a68;
 }
 
 .App {
@@ -14,40 +27,41 @@
 
 html {
   font-size: 100%;
-  background-color: var(--CREAM);
+  background-color: var(--HONEYDEW);
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Rubik-Regular', Helvetica, sans-serif;
 }
-ul{
-  text-align: center;
+
+#Menu {
+  text-align: right;
 }
-li {
+
+#Menu li {
   display: inline;
   margin: 0.5rem;
-}
-a {
-  color: black;
-  padding: 0.75rem 1.25rem;
+} 
+
+#Menu a{
+  padding: 0.5rem 0.75rem 0.5rem 0rem;
   text-align: center;
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: bolder;
-  border-radius: 1rem;
 }
-a:link {
-  background-color: var(--GREEN);
+
+#Menu a:link, 
+#Menu a:visited {
+  color: var(--RUSSIAN_VIOLET);
 }
-a:visited {
-  background-color: var(--OLIVE);
+
+#Menu a:hover,
+#Menu a:active,
+#Menu a.selected{
+  color: var(--LAVENDER_FLORAL)
 }
-a:hover {
-  background-color: var(--GREEN);
-}
-a:active {
-  background-color: var(--LIME);
-}
+
 h2 {
   color: black;
   padding: 0.75rem 1.25rem;
@@ -58,19 +72,24 @@ h2 {
   font-size: 1.5rem;
   border-radius: 1rem;
 }
+
 img {
   max-width: 100%;
   height: auto;
   margin: 4rem;
 }
+
+h1, h2, h3, h4, h5, h6, p {
+  font-family: 'Rubik-Regular', sans-serif;
+}
+
 h1{
-  font-family: 'Roboto', sans-serif;
   font-size: 2rem;
   font-weight: bold;
   text-align: center;
 }
+
 p{
-  font-family: 'Roboto', sans-serif;
   font-size: 1.5rem;
   font-weight: 9rem;
   line-height: 150%;
