--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,6 @@
 }
 
 html {
-  font-size: 100%;
   background-color: var(--HONEYDEW);
 }
 
@@ -64,20 +63,10 @@ body {
 
 h2 {
   color: black;
-  padding: 0.75rem 1.25rem;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
   font-weight: bolder;
-  font-size: 1.5rem;
-  border-radius: 1rem;
+  font-size: 1.75rem;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
-  margin: 4rem;
-}
 
 h1, h2, h3, h4, h5, h6, p {
   font-family: 'Rubik-Regular', sans-serif;
@@ -90,8 +79,7 @@ h1{
 }
 
 p{
-  font-size: 1.5rem;
-  font-weight: 9rem;
-  line-height: 150%;
-  margin:2rem 4rem;
+font-size: 1.25rem;
+line-height: 2;
+text-align:left;
 }
